[package]
name = "firewall"
version = "0.1.0"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
edition = "2021"

[profile.dev]
panic = "abort"
lto = "off"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "s"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "=3.2.23", features = ["derive"] }
enumn = "0.1"
strum = { version = "0.20", features = ["derive"] }
strum_macros = { version = "0.20" }
