workspace = { members = ["string_enum", "string_enum/string_enum_macro"] }
[package]
name = "firewall"
version = "0.1.0"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
edition = "2021"

[profile.dev]
panic = "abort"
lto = "off"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "s"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "3", features = ["derive"] }
enumn = "0.1"
strum = { version = "0.20", features = ["derive"] }
strum_macros = { version = "0.20" }
nispor = "=1.2.8"
ipnet = "2.9"
string_enum = { path = "string_enum" }
string_enum_macro = { path = "string_enum/string_enum_macro" }
